Prevent overlaps when wrapping

--- a/wiki/src/donate/banner.css
+++ b/wiki/src/donate/banner.css
@@ -89,10 +89,11 @@ body.pt .donate-pt {
     background-size: 330px, 175px;
     background-position: -60px -40px, right bottom;
     padding-left: 150px;
+    padding-bottom: 1.5em;
 }
 #donate-banner p {
     font-size: 16px;
-    margin-bottom: 10px;
+    line-height: 1.25em;
 }
 }
 
